--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gatsby-plugin-mdx": "^2.0.0",
     "gatsby-source-filesystem": "^3.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
