--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "gatsby-plugin-sharp": "^4.0.1",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-remark-images": "^6.1.1",
+    "gatsby-remark-prismjs": "^6.1.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "node-sass": "^6.0.1",
+    "prismjs": "^1.25.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
