--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "@types/react-helmet": "^6.1.2",
     "esbuild": "^0.13.9",
     "esbuild-register": "^3.0.0",
-    "prettier": "2.3.2"
+    "prettier": "2.3.2",
+    "stylelint": "^14.5.3",
+    "stylelint-config-standard": "^25.0.0"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
@@ -71,6 +73,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "stylelint": "stylelint src/**/*.module.scss"
   }
 }
